--- a/css/index.css
+++ b/css/index.css
@@ -437,7 +437,7 @@
         }
     }
     
-    @media (max-width:497px) {
+    @media (max-width:552px) {
         .description .p1 {
             font-size: 50px;
             margin-left: 0%;
@@ -450,7 +450,7 @@
         }
     }
     
-    @media(max-height:500px)and (max-width:666px) {
+    @media(max-height:547px)and (max-width:666px) {
         .containe {
             height: 100px;
             width: 100%;
@@ -471,8 +471,9 @@
             margin-top: 100px;
         }
         .icon-menu {
-            padding-left: 170px;
+            padding-left: 319px;
             margin-top: 0px;
+            padding-bottom: 50px;
         }
         .icon-menu:hover {
             font-size: 43px;
@@ -487,5 +488,12 @@
         }
         .imagenes {
             margin-top: 120px;
+        }
+    }
+    
+    @media (max-width:554px)and (max-height:550px) {
+        .icon-menu {
+            padding-left: 170px;
+            margin-top: 0px;
         }
     }
