--- a/view/top.html
+++ b/view/top.html
@@ -41,21 +41,21 @@
 
             <ul class="idgaul">
 
-                <li class="idgali"><a href="/Batman.html">DC</a>
+                <li class="idgali"><a >DC</a>
                     <ul class="idgaul">
                         <li class="idgali"><a href="./Batman.html">Batman</a> </li>
                         <li class="idgali"><a href="">Superman</a></li>
                         <li class="idgali"><a href="">W W</a></li>
                     </ul>
                 </li>
-                <li class="idgali"><a href="">Marvel</a>
+                <li class="idgali"><a >Marvel</a>
                     <ul class="idgaul">
                         <li class="idgali"><a href="./Batman.html">C America</a> </li>
                         <li class="idgali"><a href="">Spyderman</a></li>
                         <li class="idgali"><a href="">X-man</a></li>
                     </ul>
                 </li>
-                <li class="idgali"><a href="">Gallery</a>
+                <li class="idgali"><a >Gallery</a>
                     <ul class="idgaul">
                         <li class="idgali"><a href="./top.html">Top</a> </li>
 
