--- a/css/index.css
+++ b/css/index.css
@@ -499,11 +499,12 @@
     }
  @media (max-width:390px)and (max-height:480px) {
             .icon-menu {
-                padding-left: 105px;
+                padding-left: 0px;
                 margin-top: 0px;
             }
             .description .p1 {
                 font-size: 40px;
                 margin-left: 0%;
+                width: 80%;
             }
         }
