--- a/css/index.css
+++ b/css/index.css
@@ -510,5 +510,6 @@
                 padding: 0px 0px;
                 margin-right: 1%;
                 border: solid 1px;
+                width: 10px;
             }
         }
