--- a/css/index.css
+++ b/css/index.css
@@ -511,5 +511,6 @@
                 margin-right: 1%;
                 border: solid 1px;
                 width: 10px;
+                 margin-top: 13px;
             }
         }
