--- a/css/index.css
+++ b/css/index.css
@@ -492,24 +492,33 @@
     }
     
     @media (max-width:554px)and (max-height:550px) {
-        .icon-menu {
-            padding-left: 170px;
-            margin-top: 14px;
-        }
+        .description .p1 {
+                padding: 0px 0px;
+                margin-left: 0px;
+                /* border: solid 1px; */
+                width: 80%;
+                height: 15px;
+            }
+         .icon-menu {
+                padding: 0px 0px;
+                margin-right: 1%;
+                width: 10px;
+                margin-top: 14px;
+            }
     }
  @media (max-width:390px)and (max-height:480px) {
             .description .p1 {
                 font-size: 40px;
                 padding: 0px 0px;
                 margin-left: 0px;
-                border: solid 1px;
+                
                 width: 80%;
                 height: 15px;
             }
             .icon-menu {
                 padding: 0px 0px;
                 margin-right: 1%;
-                border: solid 1px;
+               
                 width: 10px;
                  margin-top: 13px;
             }
